# ASSIGNMENT-2

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
Operators/include/: BatchNormalization.h  DenseLayer.h  Flatten.h  MaxPooling2D.h  MaxPooling3D.h  conv2d.h
Operators/src/: BatchNormalization.cpp  DenseLayer.cpp  Flatten.cpp  MaxPooling2D.cpp  MaxPooling3D.cpp  conv2d.cpp
configs/json/: model_config_ragul.json
data/: model_architecture.json
python files/: generate_img_bin_file.py  layerwisw_output_python.py  predict_code_python.ipynb
report/: layer_wise_output_cpp.txt  layerwise_output_python.txt
src/: main.cpp
utilities/include/: utils.h
utilities/src/: utils.cpp
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
